src/test/deca/context/invalid/created/binary_exp/op_comp/geq_float_boolean.deca
// Description :
//    test geq entre un float et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Opérandes de type float, boolean, attendu: ‘int’ ou ‘float’

{
float a;
boolean b;
boolean c = a >= b;
}
